--- a/assets/main.scss
+++ b/assets/main.scss
@@ -37,13 +37,13 @@ h1, h2, h3 {
 }
 
 h1 {
-	font-size: 1.5rem;
+	font-size: 2rem;
 	line-height: 1.6rem;
 	font-weight: normal;
 }
 @media screen and (min-width: $on-laptop) {
 	h1 {
-		font-size: 2.2rem;
+		font-size: 2.8rem;
 		line-height: 2.3rem;
 	}
 }
@@ -239,9 +239,11 @@ a {
 	* {
 		color: white !important;
 		text-decoration: none !important;
-	}
+		text-align: center;
+	} 
+	
 	.footer-contact {
-		margin-left: 30%;
+		text-align: center;;
 		h2 {
 			font-size: 26px;
 		}
