--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,7 +10,7 @@
     <div class="section-title">
       <div class="wrapper">
         <div class="wrapper-center">
-          <a href="/project/{{ page.nextProject }}">
+          <a href="/project/{{ page.previousProject }}">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 43.665 43.665">
               <g id="Icon_feather-arrow-up-right" data-name="Icon feather-arrow-up-right" transform="translate(21.772 40.837) rotate(-135)">
                 <path id="Pfad_5" data-name="Pfad 5" d="M0,28.962a1.994,1.994,0,0,1-1.41-.581,2,2,0,0,1-.009-2.828L25.371-1.41A2,2,0,0,1,28.2-1.419a2,2,0,0,1,.009,2.828L1.419,28.372A1.994,1.994,0,0,1,0,28.962Z" fill="#fff"/>
