--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,18 @@
                 </g>
             </svg>
             <span>&nbsp;contact</span></a>
+		  
+		  
+		    <a href="Anna_Vasilevich_lebenslauf_2024.pdf" download="Anna_Vasilevich_lebenslauf_2024.pdf"
+          <svg class="arrow-visible-on-hover" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 43.665 43.665">
+                <g id="Icon_feather-arrow-up-right" data-name="Icon feather-arrow-up-right" transform="translate(21.894 2.828) rotate(45)">
+                  <path id="Pfad_5" data-name="Pfad 5" d="M0,28.962a1.994,1.994,0,0,1-1.41-.581,2,2,0,0,1-.009-2.828L25.371-1.41A2,2,0,0,1,28.2-1.419a2,2,0,0,1,.009,2.828L1.419,28.372A1.994,1.994,0,0,1,0,28.962Z" fill="#824949"/>
+                  <path id="Pfad_6" data-name="Pfad 6" d="M26.79,28.962a2,2,0,0,1-2-2V2H0A2,2,0,0,1-2,0,2,2,0,0,1,0-2H26.79a2,2,0,0,1,2,2V26.962A2,2,0,0,1,26.79,28.962Z" fill="#824949"/>
+                </g>
+            </svg>
+            <span>&nbsp;My CV</span></a>
+		  
+		  
       </div>
     </nav>
   </div>
