--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
                   <path id="Pfad_6" data-name="Pfad 6" d="M26.79,28.962a2,2,0,0,1-2-2V2H0A2,2,0,0,1-2,0,2,2,0,0,1,0-2H26.79a2,2,0,0,1,2,2V26.962A2,2,0,0,1,26.79,28.962Z" fill="#824949"/>
                 </g>
             </svg>
-            <span>&nbsp;My CV</span></a>
+            <span>&nbsp;Resume</span></a>
 		  
 		  
       </div>
