menu padding left

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
             <span>&nbsp;contact</span></a>
 		  
 		  
-		    <a href="Anna_Vasilevich_lebenslauf_2024.pdf" download="Anna_Vasilevich_lebenslauf_2024.pdf"
+		    <a href="Anna_Vasilevich_lebenslauf_2024.pdf" download="Anna_Vasilevich_lebenslauf_2024.pdf" style="padding-left: 10px;"
           <svg class="arrow-visible-on-hover" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 43.665 43.665">
                 <g id="Icon_feather-arrow-up-right" data-name="Icon feather-arrow-up-right" transform="translate(21.894 2.828) rotate(45)">
                   <path id="Pfad_5" data-name="Pfad 5" d="M0,28.962a1.994,1.994,0,0,1-1.41-.581,2,2,0,0,1-.009-2.828L25.371-1.41A2,2,0,0,1,28.2-1.419a2,2,0,0,1,.009,2.828L1.419,28.372A1.994,1.994,0,0,1,0,28.962Z" fill="#824949"/>
