--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,7 +20,8 @@ $background-color: #FFFCFC;
 	justify-content: center; 
 	align-items: center; 
 	width: 1200px; 
-	height: 150px;"
+	height: 150px;
+	gap: 20px;
 }
 
 
