--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,8 +19,8 @@ $background-color: #FFFCFC;
 	flex-wrap: wrap; 
 	justify-content: center; 
 	align-items: center; 
-	width: 1200px; 
-	height: 150px;
+	width: auto; 
+	height: 100px;
 	gap: 30px;
 }
 
