--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,12 +19,12 @@ $background-color: #FFFCFC;
 	flex-wrap: wrap; 
 	justify-content: center; 
 	align-items: center; 
-	height: 100px;
+	height: 80px;
 	gap: 30px;
 }
 
-.logo_div > image {
-	height: 80px;
+.logo_div > img {
+	height: 60px;
 }
  
 
