--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,8 +19,9 @@ $background-color: #FFFCFC;
 	flex-wrap: wrap; 
 	justify-content: center; 
 	align-items: center; 
-	height: 80px;
+	height: 60px;
 	gap: 30px;
+	margin-bottom: 30px;
 }
 
 .logo_div > img {
@@ -53,6 +54,7 @@ h1 {
 	font-size: 2rem;
 	line-height: 2.6rem;
 	font-weight: normal;
+	margin-bottom: 30px;
 }
 @media screen and (min-width: $on-laptop) {
 	h1 {
